syntax = "proto3";
package api;

option go_package = "./api";

message DruidTalents {
    int32 starlight_wrath = 1;
}

message BalanceDruid {
    message Agent {
    }
    Agent agent = 1;

    DruidTalents talents = 2;
    
    message Options {
    }
    Options options = 3;
}
